@@ -1,11 +1,13 @@
 # 概要
 
 GCC の `-c` で得られるオブジェクトファイルを Foreign Function & Memory API を使って実行します。  
-⚠️動的リンカが働かないため、 `printf()` など libc を含む外部ライブラリの呼び出しは機能しません。
+
+> [!WARNING]
+> 動的リンカが働かないため、 `printf()` など libc を含む外部ライブラリの呼び出しは機能しません。
 
 # 必要なもの
 
-* Java 21
+* Java 22
 * Maven
 * GCC
 
@@ -27,19 +29,14 @@ $ mvn exec:exec@run
     </goals>
     <configuration>
         <executable>${java.home}/bin/java</executable>
-        <workingDirectory>${project.build.directory}</workingDirectory>
         <arguments>
-            <argument>-classpath</argument>
-            <classpath/>
             <argument>--enable-preview</argument>
-            <argument>--enable-native-access=ALL-UNNAMED</argument>
-            <argument>${mainClass}</argument>
+            <argument>-jar</argument>
+            <argument>${project.build.directory}/${imageName}.jar</argument>
             <argument>${project.build.directory}/test.o</argument>
-
             <!-- ここで関数を指定する（mul2 か mul3） -->
             <argument>mul2</argument>
             <!-- <argument>mul3</argument> -->
-
         </arguments>
     </configuration>
 </execution>
@@ -47,7 +44,7 @@ $ mvn exec:exec@run
 
 # カラクリ
 
-`gcc -c` で得られたオブジェクトファイルを [FileChannel::map](https://docs.oracle.com/en/java/javase/21/docs/api/java.base/java/nio/channels/FileChannel.html#map(java.nio.channels.FileChannel.MapMode,long,long)) で [MappedByteBuffer](https://docs.oracle.com/en/java/javase/21/docs/api/java.base/java/nio/MappedByteBuffer.html) にマップします。そこから `MemorySegment` を `ofBuffer()` で取得します。
+`gcc -c` で得られたオブジェクトファイルを [FileChannel::map](https://docs.oracle.com/en/java/javase/22/docs/api/java.base/java/nio/channels/FileChannel.html#map(java.nio.channels.FileChannel.MapMode,long,long)) で [MappedByteBuffer](https://docs.oracle.com/en/java/javase/22/docs/api/java.base/java/nio/MappedByteBuffer.html) にマップします。そこから `MemorySegment` を `ofBuffer()` で取得します。
 
 `FileChannel::map` には `MemorySegment` を返すものも存在しますが、ELF の解析に使う [JElf](https://github.com/fornwall/jelf) v0.9.0 の [ElfFile](https://javadoc.io/doc/net.fornwall/jelf/latest/net/fornwall/jelf/ElfFile.html) が `ByteBuffer` 系は `MappedByteBuffer` しか受け付けないため、これを経由して `MemorySegment` を取得するようにします。
 
